<resources>
    <string name="admob_app_id">ca-app-pub-7797435335029081~8483730148</string>
    <string name="app_name">OverCam</string>    <!-- 앱 이름 -->
    <string name="default_name">Default</string>    <!-- 디폴트 값 -->
    <string name="add_category_title">New Category</string>    <!-- 새 항목 메시지 -->
    <string name="modify_category_title">New Name</string>    <!-- 새 항목 -->
    <string name="export_file">Export</string>
    <string name="duplicate_name">Duplicate name exists</string>    <!-- 중복되는 이름(항목이름)이 존재합니다. -->
    <string name="file_name">File Name</string>    <!-- 비디오 만들 때 파일명 설정 -->
    <string name="gif_fps">GIF Time(sec)</string>
    <string name="fps">Movie Time (sec)</string>    <!-- 비디오 만들 때 프레임 설정 -->
    <string name="choose_app">Choose Application</string>    <!-- 목록 불러올 때 사용할 앱 선택 -->
    <string name="delete_category">Delete category %1$s?</string>    <!-- 항목 삭제 -->
    <string name="warning_category">Only one item left</string>
    <string name="include_images">include images</string>
    <string name="notification_on">Notification ON</string>
    <string name="notification_off">Notification OFF</string>
    <string name="check_time">Check the [%1$s] time</string>
    <string name="apply">APPLY</string>
    <string name="allow">ALLOW</string>
    <string name="done">DONE</string>
    <string name="add">ADD</string>
    <string name="ok">OK</string>
    <string name="delete">DELETE</string>
    <string name="cancel">Cancel</string>
    <string name="option">Option</string>
    <string name="help">Help</string>
    <string name="notification">Notification</string>
    <string name="rename">Rename</string>
    <string name="remove">Remove</string>
    <string name="capture">Capture</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="gif">GIF</string>
    <string name="change">Change</string>
    <string name="loading">Loading</string>
    <string name="temp">TEMP</string>
    <string name="none"> </string>

    <string name="close_app">Please click BACK again to exit.</string>

    <string name="manual_title_1">Application</string>
    <string name="manual_title_2">Camera</string>
    <string name="manual_title_3">Category</string>
    <string name="manual_title_4">Start</string>

    <string name="manual_app_info_string_1">Take a photo(Before/After) like a pro</string>
    <string name="manual_app_info_string_2">Make your photos convert to gif/video</string>

    <string name="manual_camera_info_string_1">Edit category (Add, Remove, Help)</string>
    <string name="manual_camera_info_string_2">Flash On/Off</string>
    <string name="manual_camera_info_string_3">Guide line On/Off</string>
    <string name="manual_camera_info_string_4">Control transparency</string>
    <string name="manual_camera_info_string_5">Export Gif/Video file</string>

    <string name="manual_category_info_string_1_no">1</string>
    <string name="manual_category_info_string_1">Swipe to change category</string>
    <string name="manual_category_info_string_2_no">2</string>
    <string name="manual_category_info_string_2">Open the gallery</string>
    <string name="manual_category_info_string_3_no">3</string>
    <string name="manual_category_info_string_3">Take a picture</string>
    <string name="manual_category_info_string_4_no">4</string>
    <string name="manual_category_info_string_4">Change camera direction</string>

    <string name="manual_first_info_string_1">What subject will you take pictures on?</string>
    <string name="manual_first_info_string_2">ex) Parenting, Plant, Work out</string>
    <string name="manual_first_info_string_3">Start</string>

    <string name="new_category">New Subject</string>

    <string name="loading_progress">Exporting %1$s %%</string>    <!-- 항목 삭제 -->

</resources>
