<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">

    <TextureView
            android:id="@+id/previewTextureView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    <TextView
            android:id="@+id/textSimilarity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"/>

    <Button
            android:id="@+id/btnChange"
            android:text="@string/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top" />

    <ImageView
            android:id="@+id/imgBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/default_name"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/barAlpha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:progress="40"
            android:secondaryProgress="70"
    />

    <Button
            android:id="@+id/btnCapture"
            android:text="@string/capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal" />
</FrameLayout>