<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:paddingTop="10dp">
    <Button
            android:id="@+id/btnAdd"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:background="@drawable/bg_round_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnRemove"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:id="@+id/btnRemove"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:text="@string/remove"
            android:textColor="@color/white"
            android:background="@drawable/bg_round_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/btnAdd"
            app:layout_constraintEnd_toStartOf="@+id/btnHelp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:id="@+id/btnHelp"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:text="@string/help"
            android:textColor="@color/white"
            android:background="@drawable/bg_round_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/btnRemove"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>