<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
                android:id="@+id/lastImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/default_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
        />

        <View
                android:id="@+id/transparent_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_70"
                android:scaleType="centerCrop"
                android:contentDescription="@string/none"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
        />

        <TextView
                android:id="@+id/categoryName"
                android:text="@string/default_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
        />

        <TextView
                android:id="@+id/categoryNameBorder"
                android:text="@string/none"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/circle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <!--
        카메라 목록 동영상 추가 설정
        -->
        <ImageButton
                android:id="@+id/btnNotification"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="12dp"
                android:src="@drawable/main_btn_notification_off"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:background="@drawable/main_btn_common_background"
                app:layout_constraintCircle="@+id/categoryName"
                app:layout_constraintCircleRadius="100dp"
                app:layout_constraintCircleAngle="10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/notification"/>
        <ImageButton
                android:id="@+id/btnAdd"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="15dp"
                android:src="@drawable/main_btn_plus"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:background="@drawable/main_btn_common_background"
                app:layout_constraintCircle="@+id/categoryName"
                app:layout_constraintCircleRadius="100dp"
                app:layout_constraintCircleAngle="70"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/add"/>
        <ImageButton
                android:id="@+id/btnRemove"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="15dp"
                android:src="@drawable/main_btn_remove"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:background="@drawable/main_btn_common_background"
                app:layout_constraintCircle="@+id/categoryName"
                app:layout_constraintCircleRadius="100dp"
                app:layout_constraintCircleAngle="90"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/remove"/>
        <ImageButton
                android:id="@+id/btnCamera"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:padding="15dp"
                android:src="@drawable/main_btn_photo"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:background="@drawable/main_btn_common_background"
                app:layout_constraintCircle="@+id/categoryName"
                app:layout_constraintCircleRadius="120dp"
                app:layout_constraintCircleAngle="200"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/capture"/>
        <ImageButton
                android:id="@+id/btnVideo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:padding="20dp"
                android:src="@drawable/main_btn_video"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:background="@drawable/main_btn_common_background"
                app:layout_constraintCircle="@+id/categoryName"
                app:layout_constraintCircleRadius="110dp"
                app:layout_constraintCircleAngle="250"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/video"/>
        <ImageButton
                android:id="@+id/btnGif"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:padding="20dp"
                android:src="@drawable/main_btn_gif"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:background="@drawable/main_btn_common_background"
                app:layout_constraintCircle="@+id/categoryName"
                app:layout_constraintCircleRadius="110dp"
                app:layout_constraintCircleAngle="280"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/gif"/>
</androidx.constraintlayout.widget.ConstraintLayout>